--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -6,7 +6,7 @@ services:
   - name: auth-service
     image:
       registry_type: DOCKER_HUB
-      registry: ttrece/foodfund-auth
+      repository: ttrece/foodfund-auth
       tag: develop
     health_check:
       http_path: /health
@@ -40,7 +40,7 @@ services:
   - name: user-service
     image:
       registry_type: DOCKER_HUB
-      registry: ttrece/foodfund-user
+      repository: ttrece/foodfund-user
       tag: develop
     health_check:
       http_path: /health
@@ -56,7 +56,7 @@ services:
   - name: graphql-gateway
     image:
       registry_type: DOCKER_HUB
-      registry: ttrece/foodfund-graphql-gateway
+      repository: ttrece/foodfund-graphql-gateway
       tag: develop
     health_check:
       http_path: /health
