--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:auth": "nest build auth",
     "build:user": "nest build user",
     "build:gateway": "nest build graphql-gateway",
+    "build:campaign": "nest build campaign",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "format:check": "prettier --check \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -22,6 +23,7 @@
     "start:auth": "nest start auth --watch",
     "start:user": "nest start user --watch",
     "start:gateway": "nest start graphql-gateway --watch",
+    "start:campaign": "nest start campaign --watch",
     "start:prod": "node dist/apps/graphql-gateway/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
