--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,13 +8,35 @@ services:
       - "8000:8000"
     env_file:
       - .env.docker
+    environment:
+      - DOCKER_ENV=true
+      - NODE_ENV=production
+      
+      - AUTH_HOST=auth-service
+      - AUTH_PORT=8002
+      - USERS_SUBGRAPH_HOST=user-service
+      - USERS_SUBGRAPH_PORT=8003
+      - CAMPAIGNS_SUBGRAPH_HOST=campaign-service
+      - CAMPAIGNS_SUBGRAPH_PORT=8004
+     
+      - PORT=8000
+      - GRAPHQL_GATEWAY_PORT=8000
     depends_on:
       auth-service:
         condition: service_healthy
       user-service:
         condition: service_healthy
+      campaign-service:
+        condition: service_healthy
     networks:
       - foodfund-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 15s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    restart: unless-stopped
 
   auth-service:
     build:
@@ -24,14 +46,19 @@ services:
       - "8002:8002"
     env_file:
       - .env.docker
+    environment:
+      - DOCKER_ENV=true
+      - NODE_ENV=production
+      - PORT=8002
     networks:
       - foodfund-network
     healthcheck:
       test: ["CMD", "wget", "--spider", "--server-response", "http://localhost:8002/health"]
-      interval: 5s
+      interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 5s
+      start_period: 15s
+    restart: unless-stopped
 
   user-service:
     build:
@@ -41,15 +68,46 @@ services:
       - "8003:8003"
     env_file:
       - .env.docker
+    environment:
+      - DOCKER_ENV=true
+      - NODE_ENV=production
+      - PORT=8003
+      - USERS_GRPC_PORT=50002
     networks:
       - foodfund-network
     healthcheck:
       test: ["CMD", "wget", "--spider", "--server-response", "http://localhost:8003/health"]
-      interval: 5s
+      interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 5s
+      start_period: 15s
+    restart: unless-stopped
+
+  campaign-service:
+    build:
+      context: .
+      dockerfile: apps/campaign/Dockerfile
+    ports:
+      - "8004:8004"
+    env_file:
+      - .env.docker
+    environment:
+      - DOCKER_ENV=true
+      - NODE_ENV=production
+      - PORT=8004
+    networks:
+      - foodfund-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8004/health"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
+      start_period: 25s
+    restart: unless-stopped
 
 networks:
   foodfund-network:
     driver: bridge
+    driver_opts:
+      com.docker.network.bridge.name: foodfund-net
+      com.docker.network.driver.mtu: 1500
