--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/schedule": "^6.0.1",
     "@prisma/client": "^6.16.2",
     "@sentry/nestjs": "^10.15.0",
     "@sentry/node": "^10.15.0",
@@ -85,7 +86,7 @@
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
     "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.13.19",
+    "@swc/core": "^1.13.20",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
