hotfix: run dockerfile on linux

--- a/apps/campaign/Dockerfile
+++ b/apps/campaign/Dockerfile
@@ -7,7 +7,9 @@ COPY package*.json ./
 COPY apps/campaign/package*.json ./apps/campaign/
 RUN npm ci
 COPY . .
+# Generate Prisma client for build (Windows/native)  
 RUN cd apps/campaign && npx prisma generate
+# Build application
 RUN npm run build:campaign
 
 FROM node:${NODE_VERSION}-alpine AS production
@@ -18,8 +20,13 @@ COPY --from=build /usr/src/app/apps/campaign/package*.json ./apps/campaign/
 COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/apps/campaign/prisma ./apps/campaign/prisma
 
+# Generate Prisma client for Linux runtime in production stage
 WORKDIR /usr/src/app/apps/campaign
 RUN npx prisma generate
+
+# Create symlink from custom path to default Prisma location for campaign
+RUN mkdir -p /usr/src/app/node_modules/.prisma && \
+    ln -sf /usr/src/app/apps/campaign/src/generated/campaign-client /usr/src/app/node_modules/.prisma/campaign-client
 
 WORKDIR /usr/src/app
 RUN addgroup -g 1001 -S nodejs && adduser -S nestjs -u 1001
