fix(build): add gRPC proto files to campaign Docker image
Copies the gRPC proto files from libs/grpc/proto into the campaign Docker image to ensure they are available at runtime.

--- a/apps/campaign/Dockerfile
+++ b/apps/campaign/Dockerfile
@@ -17,6 +17,7 @@ COPY --from=build /usr/src/app/package*.json ./
 COPY --from=build /usr/src/app/apps/campaign/package*.json ./apps/campaign/
 COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/apps/campaign/prisma ./apps/campaign/prisma
+COPY --from=build /usr/src/app/libs/grpc/proto ./libs/grpc/proto
 
 WORKDIR /usr/src/app/apps/campaign
 RUN npx prisma generate
