--- a/apps/campaign/tsconfig.app.json
+++ b/apps/campaign/tsconfig.app.json
@@ -5,5 +5,11 @@
     "outDir": "../../dist/apps/campaign"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*spec.ts",
+    "src/generated/**/*"
+  ]
 }
