--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "ms": "^2.1.3",
+    "nanoid": "^5.1.6",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
