fix(docker): fix omitting "--ignore-scripts" can lead to the execution of shell scripts
Adds a cache mount for npm to speed up dependency installation and uses --ignore-scripts for npm ci. This improves build performance and reliability in the Docker image for the operation app.

--- a/apps/operation/Dockerfile
+++ b/apps/operation/Dockerfile
@@ -26,7 +26,10 @@ COPY --from=build /usr/src/app/package.json ./package.json
 COPY --from=build /usr/src/app/package-lock.json ./package-lock.json
 COPY --from=build /usr/src/app/apps/operation/prisma ./apps/operation/prisma
 COPY --from=build /usr/src/app/libs/grpc/proto ./libs/grpc/proto
-RUN npm ci --omit=dev && npm cache clean --force
+
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci --omit=dev --ignore-scripts && npm cache clean --force
+
 RUN cd apps/operation && npx prisma generate
 
 RUN addgroup -g 1001 -S nodejs && \
