--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@sentry/node": "^10.15.0",
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "aws-jwt-verify": "^4.0.1",
     "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
@@ -96,6 +97,7 @@
     "nanoid": "^5.1.6",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "uuid": "^11.1.0",
