--- a/package.json
+++ b/package.json
@@ -81,13 +81,14 @@
     "@sentry/node": "^10.15.0",
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
-    "@willsoto/nestjs-prometheus": "^6.0.2",
     "aws-jwt-verify": "^4.0.1",
     "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.1",
     "dataloader": "^2.2.3",
+    "dd-trace": "^5.23.0",
+    "hot-shots": "^10.2.0",
     "graphql": "^16.11.0",
     "http-proxy-middleware": "^3.0.5",
     "ioredis": "^5.8.1",
@@ -97,7 +98,6 @@
     "nanoid": "^5.1.6",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
-    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "uuid": "^11.1.0",
