--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/microservices": "^11.1.6",
@@ -88,8 +89,8 @@
     "compression": "^1.8.1",
     "dataloader": "^2.2.3",
     "dd-trace": "^5.23.0",
-    "hot-shots": "^10.2.0",
     "graphql": "^16.11.0",
+    "hot-shots": "^10.2.0",
     "http-proxy-middleware": "^3.0.5",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
